kubernetes/script/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: test-rabbitmq
  namespace: rabbitmq-system
spec:
  rules:
    - host: rabbitmq.testing.web
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-rabbitmq
                port:
                  number: 15672
